--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.min.js"></script>
+    <script src="javascript/p5.js"></script>
+    <script src="p5.dom.js"></script>
+    <script src="javascript/p5.sound.min.js"></script>
+    <script src="javascript/p5.easycam.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8" />
 
   </head>
   <body>
     <main>
+      <a href="./html/part2.html"> part 2</a>
     </main>
-    <script src="javascript/sketch.js"></script>
+    <script src="/javascript/sketch.js"></script>
   </body>
 </html>
