--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8" />
 
   </head>
   <body>
     <main>
-      <a href="./html/part2.html"> part 2</a>
+      <a href="html/part2.html"> part 2</a>
     </main>
     <script src="/javascript/sketch.js"></script>
   </body>
