Part 2-01.02-Jay(Fix linking problem)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <main>
       <a href="html/part2.html"> part 2</a>
     </main>
-    <script src="/javascript/sketch.js"></script>
+    <script src="./javascript/sketch.js"></script>
   </body>
 </html>
