--- a/html/part2.html
+++ b/html/part2.html
@@ -3,7 +3,7 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <meta charset="utf-8" />
 
   </head>
@@ -22,6 +22,6 @@
       </p>
     </div>
     
-    <script src="/javascript/part2.js"></script>
+    <script src="../javascript/part2.js"></script>
   </body>
 </html>
