--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
-    
+    <script src="path/to/p5.sound.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8" />
 
   </head>
   <body>
-    <main>
+    <main class="nextPage">
       <a href="html/part2.html"> part 2</a>
     </main>
     <script src="./javascript/sketch.js"></script>
