--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
   </head>
   <body>
     <main class="nextPage">
-      <a href="html/part2.html"> part 2</a>
+      <div id="text-container">
+        <a href="part2/part2.html"> >> </a>
+      </div>
+
+      <div id="sketch-container"></div>
     </main>
+
     <script src="./javascript/sketch.js"></script>
   </body>
 </html>
