--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main class="nextPage">
       <div id="text-container">
-        <a href="./part2/part2.html"> >> </a>
+        <a href="../part2/part2.html"> >> </a>
       </div>
 
       <div id="sketch-container"></div>
