--- a/part4/part4.html
+++ b/part4/part4.html
@@ -10,7 +10,7 @@
     <main>
       <div id="text-container-4">
         And so I learned that a man, <br> in <mark></mark>climax</mark>, <br> was the closest thing
-to <a href="/part5/part5.html">surrender.</a>
+to <a href="../part5/part5.html">surrender.</a>
       </div>
 
     <div id="sketch-container-4"></div>
